<?xml version="1.0" encoding="utf-8"?>
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"/>-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:background="@drawable/background" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="#FBFBFB">

        <LinearLayout
            android:id="@+id/departure_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:layout_marginBottom="30sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/departure"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:textSize="18sp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:hint="@string/departure_hint"
                android:textColorHighlight="@color/main_button"
                android:textColorLink="#000000"
                />

            <ImageButton
                android:id="@+id/maps_button1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#FBFBFB"
                android:src="@drawable/map_icon"></ImageButton>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/arrival_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/departure_layout"
            android:layout_marginTop="25sp"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/arrival"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:hint="@string/arrival_hint"
                android:textColorHighlight="@color/main_button"
                android:textColorLink="#000000"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/maps_button2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#FBFBFB"
                android:src="@drawable/map_icon"></ImageButton>
        </LinearLayout>

        <EditText
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/arrival_layout"
            android:layout_marginHorizontal="40sp"
            android:layout_marginVertical="30sp"
            android:backgroundTint="@color/main_button"
            android:ems="10"
            android:hint="@string/time_hint"
            android:inputType="number"
            android:textColorHighlight="@color/main_button" />



    </RelativeLayout>

    <Button
        android:id="@+id/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0.10"
        android:backgroundTint="@color/main_button"
        android:fontFamily="sans-serif"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/main_button"
        android:textSize="25sp"
        android:textAllCaps="false"/>


</LinearLayout>