<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/maps">

    <fragment xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        />

    <Button
        android:id="@+id/map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map"
        android:layout_marginTop="-40dp"
        android:backgroundTint="@color/main_button"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/map_button"
        android:textColor="#ffffff" />

</RelativeLayout>