...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity"
    android:id="@+id/results">

    <TextView
        android:id="@+id/from"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginHorizontal="20sp"
...
